--- a/Halloapp/es.lproj/Localizable.stringsdict
+++ b/Halloapp/es.lproj/Localizable.stringsdict
@@ -175,9 +175,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>&lt;$user$&gt; and %d other replied to &lt;$author$&gt;'s post</string>
+			<string>&lt;$usuario$&gt; y %d otro respondieron a la entrada de &lt;$author$&gt;</string>
 			<key>other</key>
-			<string>&lt;$user$&gt; and %d others replied to &lt;$author$&gt;'s post</string>
+			<string>&lt;$usuario$&gt; y %d otros respondieron a las entradas de &lt;$author$&gt;</string>
 		</dict>
 	</dict>
 	<key>notification.n.photos</key>
