--- a/Notification Service Extension/ru.lproj/Localizable.strings
+++ b/Notification Service Extension/ru.lproj/Localizable.strings
@@ -85,6 +85,9 @@
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.only" = "Поделиться только с выбранными контактами";
 
+/* Title of the alert shown to user indicating their post is only shown to their favorites audience */
+"feed.privacy.list.only.title" = "Избранное";
+
 /* Text shown in notification when the user is added to a new group */
 "groups.add.notification" = "Тебя добавили в новую группу";
 
